tests/errors/sem.expected-constant.arr-size.or
main :: () -> void {
    [{5;}]int;
};
